<resources>
    <string name="app_name">punto4</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cuad">Square</string>
    <string name="tri">Triangle</string>
    <string name="rec">Rectangle</string>
    <string name="cir">Circle</string>
    <string name="side">Side</string>
    <string name="base">Base</string>
    <string name="h">High</string>
    <string name="radio">Radio</string>
    <string name="calc">Calculate</string>
    <string name="title">Area Calculator</string>
    <string name="res">Area: </string>
</resources>
